[package]
name = "pdflc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive", "cargo"] }
csv = "1.2.1"
env_logger = "0.10.0"
linkify = "0.9.0"
log = "0.4.17"
lopdf = "0.29.0"
pdf-extract = "0.6.4"
reqwest = { version = "0.11.16", features = ["blocking"] }
